--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,3 @@
-<div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, <%= em("world!") %></p>
-  <p><a href="/auth">Sign in</a></p>
-</div>
+<h1>Welcome to <%= em("Kings Cup!")%></h1>
+<p>Please sign in using a google account!</p>
+<p><a href="/auth">Sign in</a></p>
