Fix CSS for navbar and page

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,14 +1,58 @@
+body {
+  background-color: #368000;
+}
+
 .container {
-  margin: 20px auto;
+  margin: 60px auto;
   width: 600px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
+  background-color: white;
 }
 
 th {
   text-align: left;
 }
 
-.show_games li{
+li{
   list-style-type: none;
+}
+
+.account{
+  top: 0;
+  margin: 0;
+  padding: 0;
+  float: right;
+  margin-right: 15px;
+}
+
+.navbuttons li {
+  display: inline-block;
+}
+
+.navbuttons a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  box-shadow: 
+}
+
+.navbuttons a:hover{
+  color: #AAEFFF;
+}
+
+.navbuttons li img{
+  height: 3em;
+  margin: 0;
+  margin-top: -1em;
+}
+
+.navbar {
+  background-color: black;
+  color: white;
+  height: 3em;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  text-align: left;
 }
