--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,37 @@
-body {
-  background-color: #368000;
+html{
+  height: 100%;
 }
 
+body {
+  background-color: #368000;
+  height: 100%;
+}
+
+#playscreen {
+  margin-top: 3em;
+  color: white;
+  height: 100%;
+}
+
+#sidebar {
+  padding: 1em;
+  background-color: black;
+  float: left;
+  width: 30%;
+  height: 100%;
+}
+
+#sidebar ul {
+  list-style-type: none;
+}
+
+#playingfield{
+}
+
+
+
 .container {
+  height: auto;
   margin: 60px auto;
   width: 600px;
   padding: 0px 20px 20px 20px;
