Create areas to flip cards

--- a/app/views/game/play.erb
+++ b/app/views/game/play.erb
@@ -20,6 +20,13 @@
   </div>
 
   <div id="playingfield">
+    <div class="card">
+      <div id="backcard">
+        <img src = "/images/Blue_Back.svg">
+      </div>
 
+      <div id="frontcard">
+      </div>
+    </div>
   </div>
 </div>
