Add id to playing screen

--- a/app/views/game/play.erb
+++ b/app/views/game/play.erb
@@ -1,5 +1,5 @@
 <script src="/js/game.js"></script>
-<div id="playscreen">
+<div id="playscreen" data-gameid="<%=session[:game]%>">
   <div id="sidebar">
     <div id="rules">
       Current rules:
