--- a/app/views/game/show.erb
+++ b/app/views/game/show.erb
@@ -8,7 +8,7 @@
   <p>See past games:</p>
   <% Game.all.each do |game| %>
   <ul>
-    <li><a href="#" data-gameid="<%=game.id%>">Game # <%=game.id%> - Created by <%=game.user.name%></a></li>
+    <li class="clickable" data-gameid="<%=game.id%>">Game # <%=game.id%> - Created by <%=game.user.name%> </li>
   </ul>
   <% end %>
 </div>
