Fix redirect at end of game

--- a/app/views/game/play.erb
+++ b/app/views/game/play.erb
@@ -22,6 +22,9 @@
   <div id="playingfield">
     <div class="card">
       <div id="backcard">
+        <!-- <object id="E" data="/images/Blue_Back.svg">
+          <param name="src" value="/images/Blue_Back.svg">
+        </object> -->
         <img src = "/images/Blue_Back.svg">
       </div>
 
