Edit images and cleaned up some formatting on show game page

--- a/app/views/game/play.erb
+++ b/app/views/game/play.erb
@@ -25,7 +25,7 @@
         <!-- <object id="E" data="/images/Blue_Back.svg">
           <param name="src" value="/images/Blue_Back.svg">
         </object> -->
-        <img src = "/images/Blue_Back.svg">
+        <img src = "/images/blue_test.svg">
       </div>
 
       <div id="frontcard">
