--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,6 +7,20 @@ body {
   height: 100%;
 }
 
+.show_games li:hover{
+  color: red;
+  font-weight: bold;
+}
+
+.show_games li .showplayers:hover{
+  color: black;
+  font-weight: normal;
+}
+
+.showplayers {
+  padding-left: 2em;
+}
+
 #playscreen {
   margin-top: 3em;
   color: white;
@@ -44,8 +58,9 @@ body {
   height: 14em;
   margin-left: 10em;
   margin-top: 8em;
-  border-style: solid;
+  border: 2px solid;
   border-color: white;
+  border-radius: 10px;
   float: left;
 }
 
@@ -54,8 +69,9 @@ body {
   height: 14em;
   margin-left: 5em;
   margin-top: 8em;
-  border-style: solid;
+  border: 2px solid;
   border-color: white;
+  border-radius: 10px;
   float: left;
 }
 
