Adjust the input widths of the new game textfields

--- a/app/views/game/new.erb
+++ b/app/views/game/new.erb
@@ -7,14 +7,14 @@
   <input type="hidden" name ="newrules[1]" value="<%= @rules[1] %>" requried><br>
   <% for i in 2..10 %>
     <label for="<%=i%>"><%=i%>: </label>
-    <input type="text" name ="newrules[<%=i%>]" value="<%= @rules[i] %>" requried><br>
+    <input size="50" type="text" name ="newrules[<%=i%>]" value="<%= @rules[i] %>" requried><br>
   <% end %>
   <label for="jack">Jack: </label>
-  <input type="text" name ="newrules[11]" value="Make a rule" requried><br>
+  <input size="50" type="text" name ="newrules[11]" value="Make a rule" requried><br>
   <label for="queen">Queen: </label>
-  <input type="text" name ="newrules[12]" value="Questions" requried><br>
+  <input size="50" type="text" name ="newrules[12]" value="Questions" requried><br>
   <label for="king">King: Put some beer in the cup! - unchangeable! </label>
-  <input type="hidden" name ="newrules[13]" value="Pour some into the King's cup!" requried><br>
+  <input size="50" type="hidden" name ="newrules[13]" value="Pour some into the King's cup!" requried><br>
 <br>
 <h3>Add players</h3>
   <input type="text" name="player[1]" value="<%=User.find(session[:current_user]).name%>">
