Update sign in view for button

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to <%= em("Kings Cup!")%></h1>
-<p>Please sign in using a google account!</p>
-<p><a href="/auth">Sign in</a></p>
+<p>Sign in using a Google account!</p>
+<br>
+<p><a href="/auth" class="button-link">Sign in</a></p>
