--- a/public/css/application.css
+++ b/public/css/application.css
@@ -5,24 +5,38 @@ html{
 body {
   background-color: #368000;
   height: 100%;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.show_games{
+  padding-top: 2em;
+}
+
+.show_games ul{
+  list-style: none;
+  padding-left: 0;
+}
+
+.show_games h2 {
+  text-decoration: underline;
+}
+
+.show_games li{
+  padding: .25em;
 }
 
 .show_games li:hover{
+  cursor: pointer;
   color: red;
   font-weight: bold;
 }
 
-.show_games li .showplayers:hover{
-  color: black;
-  font-weight: normal;
+.showplayers{
+  padding: 1em;
 }
 
 input #inputrules{
   size: 40;
-}
-
-.showplayers {
-  padding-left: 2em;
 }
 
 #playscreen {
@@ -46,10 +60,6 @@ input #inputrules{
 #playingfield {
   float: left;
   height: 100%;
-}
-
-.card {
-
 }
 
 .card img {
@@ -81,13 +91,45 @@ input #inputrules{
 
 .container {
   height: auto;
-  margin: 60px auto;
-  width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
-  background-color: white;
+  margin: 7.5em auto;
+  width: 480px;
+  padding: 1.5em;
+  background-color: black;
+  color: white;
+  border-radius: 1.5em;
+  text-align: center;
+  box-shadow: inset 0 0 1em #86B366;
 }
 
+#rules{
+  text-align: left;
+}
+
+.newgame label{
+  width: 2em;
+  display: inline-block;
+}
+
+.button-link {
+    padding: 10px 15px;
+    background: #4479BA;
+    color: #FFF;
+    border-radius: 4px;
+    border: solid 1px #20538D;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+}
+.button-link:hover {
+    background: #356094;
+    border: solid 1px #2A4E77;
+    text-decoration: none;
+}
+.button-link:active {
+    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+    background: #2E5481;
+    border: solid 1px #203E5F;
+}
 th {
   text-align: left;
 }
@@ -112,7 +154,6 @@ li{
   color: white;
   text-decoration: none;
   font-weight: bold;
-  box-shadow: 
 }
 
 .navbuttons a:hover{
@@ -123,6 +164,7 @@ li{
   height: 3em;
   margin: 0;
   margin-top: -1em;
+  border-radius: 3em;
 }
 
 .navbar {
