--- a/app/views/game/new.erb
+++ b/app/views/game/new.erb
@@ -23,8 +23,8 @@
     <div class="player_container">
     </div>
     <br>
-    <button class='add_players'>Add Player</button>
+    <button class='button-link'>Add Player</button>
   <br><br><br>
-  <input type="submit" value="New Game!">
+  <input type="submit" value="Start Game!" class="button-link">
   </form>
 </div>
