--- a/public/css/application.css
+++ b/public/css/application.css
@@ -112,23 +112,23 @@ input #inputrules{
 
 .button-link {
     padding: 10px 15px;
-    background: #4479BA;
+    background: #a7433d;
     color: #FFF;
     border-radius: 4px;
-    border: solid 1px #20538D;
+    border: solid 1px #943c36;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     text-decoration: none;
 }
 .button-link:hover {
-    background: #356094;
-    border: solid 1px #2A4E77;
+    background: #ba4a44;
+    border: solid 1px #c15c56;
     text-decoration: none;
 }
 .button-link:active {
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    background: #2E5481;
-    border: solid 1px #203E5F;
+    background: #82342f;
+    border: solid 1px #6f2d29;
 }
 th {
   text-align: left;
@@ -153,7 +153,9 @@ li{
 .navbuttons a{
   color: white;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: bolder;
+  text-shadow: -1px -1px 0 #888;
+
 }
 
 .navbuttons a:hover{
